// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All props 1`] = `
<div>
  <textarea
    autocomplete="none"
    class="tr__form-input-textarea apptr__input _input-textarea"
    id="textAreaWidgetId"
    maxlength="100"
    name="textAreaWidgetId"
    placeholder="placeholder"
    rows="10"
  >
    test
  </textarea>
</div>
`;

exports[`Default props 1`] = `
<div>
  <textarea
    autocomplete="none"
    class="tr__form-input-textarea apptr__input _input-textarea"
    id="textAreaWidgetId"
    maxlength="2000"
    name="textAreaWidgetId"
    rows="5"
  />
</div>
`;

exports[`Disabled 1`] = `
<div>
  <textarea
    autocomplete="none"
    class="tr__form-input-textarea apptr__input _input-textarea"
    disabled=""
    id="textAreaWidgetId"
    maxlength="2000"
    name="textAreaWidgetId"
    rows="5"
  />
</div>
`;

exports[`Placeholder 1`] = `
<div>
  <textarea
    autocomplete="none"
    class="tr__form-input-textarea apptr__input _input-textarea"
    id="textAreaWidgetId"
    maxlength="100"
    name="textAreaWidgetId"
    placeholder="placeholder"
    rows="10"
  />
</div>
`;
